# src/components/user/routes.ts
@@ -7,11 +7,12 @@ import { userSchema } from './schema'
 import { userSchemaValidaton, userExistValidaton, userNotExistValidaton } from '../../middlewares/user'
 
 // handler
-import { create, getUserbyId, getUsers, remove, update } from './handler'
+import { create, getUserbyId, getUsers, getUsersPaginate, remove, update } from './handler'
 
 const router = Router()
 
 router.get('/', getUsers)
+router.get('/all', getUsersPaginate)
 router.get('/:id', getUserbyId)
 router.post('/', [userSchemaValidaton(userSchema), userExistValidaton], create)
 router.put('/:id', [userNotExistValidaton], update)
